Objetivos, Parallax Finished, Evalua, Que Evalua, Footer

--- a/index.html
+++ b/index.html
@@ -1,185 +1,359 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="utf-8">
-    <title>PreIcfes - Fundapar</title>
-    <!-- css -->
-    <link rel="stylesheet" href="./dist/css/preicfes.css">
-    <link rel="stylesheet" href="./dist/css/bootstrap.css">
-    <link rel="stylesheet" href="./dist/css/fa-solid.css">
-    <link rel="stylesheet" href="./dist/css/fa-brands.css">
-    <link rel="stylesheet" href="./dist/css/fa-regular.css">
-    <link rel="stylesheet" href="./dist/css/fontawesome.css">
-  </head>
-  <body>
-    <div id="body">
-        <div class="container-fluid" id="header">
-          <div class="row">
-            <div class="col-8"></div>
-            <div class="col">
-              <div class="row">
-                <div class="telefono col-4">
-                    <h5><i class="fas fa-phone"></i> Número</h5>
+<head>
+  <meta charset="utf-8">
+  <title>PreIcfes - Fundapar</title>
+  <!-- css -->
+  <link rel="stylesheet" href="./dist/css/preicfes.css">
+  <link rel="stylesheet" href="./dist/css/bootstrap.css">
+  <link rel="stylesheet" href="./dist/css/fa-solid.css">
+  <link rel="stylesheet" href="./dist/css/fa-brands.css">
+  <link rel="stylesheet" href="./dist/css/fa-regular.css">
+  <link rel="stylesheet" href="./dist/css/fontawesome.css">
+</head>
+<body>
+  <div id="body">
+      <div class="container-fluid" id="header">
+        <div class="row">
+          <div class="col-8"></div>
+          <div class="col">
+            <div class="row">
+              <div class="telefono col-5">
+                  <h5><i class="fas fa-phone"></i> +57 319 229 2579</h5>
+              </div>
+              <div class="brands col-3">
+                <div class="row">
+                  <div class="brand col"><a target="_blank" href="https://www.facebook.com/fundaparcartagena1/"><i class="fab fa-facebook-f"></i></a></div>
+                  <div class="brand col"><a target="_blank" href="https://twitter.com/fundaparctg"><i class="fab fa-twitter"></i></a></div>
+                  <div class="brand col"><a target="_blank" href="https://www.instagram.com/fundaparcartagena/"><i class="fab fa-instagram"></i></a></div>
                 </div>
-                <div class="brands col-3">
-                  <div class="row">
-                    <div class="brand col"><a target="_blank" href="https://www.facebook.com/fundaparcartagena1/"><i class="fab fa-facebook-f"></i></a></div>
-                    <div class="brand col"><a target="_blank" href="https://twitter.com/fundaparctg"><i class="fab fa-twitter"></i></a></div>
-                    <div class="brand col"><a target="_blank" href="https://www.instagram.com/fundaparcartagena/"><i class="fab fa-instagram"></i></a></div>
+              </div>
+              <div class="location col-4">
+                <div class="row">
+                  <div class="world col-2">
+                    <i class="fas fa-globe"></i>
                   </div>
-                </div>
-                <div class="location col-5">
-                  <div class="row">
-                    <div class="world col-2">
-                      <i class="fas fa-globe"></i>
-                    </div>
-                    <div class="col words">
-                      <p>Colombia</p>
-                    </div>
+                  <div class="col words">
+                    <p>Colombia</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
+      </div>
 
-        <div class="container-fluid" id="navbar">
-            <div class="row">
-              <div class="col nav-item">
-                  <a href="#">
-                    <div class="row">
-                      <div class="col-2">
-                        <i class="far fa-folder-open"></i>
-                      </div>
-                      <div class="col">
-                        <p>
-                          Pre Icfes <br>
-                          <small>Prueba de conocimiento</small>
-                        </p>
-                      </div>
+      <div class="container-fluid" id="navbar">
+          <div class="row">
+            <div class="col nav-item">
+                <a href="#">
+                  <div class="row">
+                    <div class="col-2">
+                      <i class="far fa-folder-open"></i>
                     </div>
-                  </a>
-              </div>
-              <div class="col nav-item">
-                  <a href="#">
-                    <div class="row">
-                      <div class="col-2">
-                        <i class="fas fa-certificate"></i>
-                      </div>
-                      <div class="col">
-                        <p>
-                          Objetivos <br>
-                          <small>
-                            Propósito a alcanzar
-                          </small>
-                        </p>
-                      </div>
+                    <div class="col">
+                      <p>
+                        Pre Icfes <br>
+                        <small>Prueba de conocimiento</small>
+                      </p>
                     </div>
-                  </a>
-              </div>
-              <div class="col nav-item">
-                  <a href="#">
-                    <div class="row">
-                      <div class="col-2">
-                        <i class="fas fa-child"></i>
-                      </div>
-                      <div class="col">
-                        <p>
-                          ¿A quién evalúa? <br>
-                          <small>
-                            Requisito de Grado
-                          </small>
-                        </p>
-                      </div>
-                      </div>
-                  </a>
-              </div>
-              <div class="col nav-item">
-                  <a href="#">
-                    <div class="row">
-                      <div class="col-2">
-                        <i class="fas fa-assistive-listening-systems"></i>
-                      </div>
-                      <div class="col">
-                        <p>
-                          ¿Qué se evalúa? <br>
-                          <small>
-                            Conocimientos adquiridos
-                          </small>
-                        </p>
-                      </div>
+                  </div>
+                </a>
+            </div>
+            <div class="col nav-item">
+                <a href="#">
+                  <div class="row">
+                    <div class="col-2">
+                      <i class="fas fa-certificate"></i>
                     </div>
-                  </a>
-              </div>
-              <div class="col nav-item">
-                  <a href="#">
-                    <div class="row">
-                      <div class="col-2">
-                        <i class="fas fa-book"></i>
-                      </div>
-                      <div class="col">
-                        <p>
-                          Aplicación pruebas<br>
-                          <small>
-                            Instrucciones
+                    <div class="col">
+                      <p>
+                        Objetivos <br>
+                        <small>
+                          Propósito a alcanzar
+                        </small>
+                      </p>
+                    </div>
+                  </div>
+                </a>
+            </div>
+            <div class="col nav-item">
+                <a href="#">
+                  <div class="row">
+                    <div class="col-2">
+                      <i class="fas fa-child"></i>
+                    </div>
+                    <div class="col">
+                      <p>
+                        ¿A quién evalúa? <br>
+                        <small>
+                          Requisito de Grado
+                        </small>
+                      </p>
+                    </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col nav-item">
+                <a href="#">
+                  <div class="row">
+                    <div class="col-2">
+                      <i class="fas fa-assistive-listening-systems"></i>
+                    </div>
+                    <div class="col">
+                      <p>
+                        ¿Qué se evalúa? <br>
+                        <small>
+                          Conocimientos adquiridos
+                        </small>
+                      </p>
+                    </div>
+                  </div>
+                </a>
+            </div>
+            <div class="col nav-item">
+                <a href="#">
+                  <div class="row">
+                    <div class="col-2">
+                      <i class="fas fa-book"></i>
+                    </div>
+                    <div class="col">
+                      <p>
+                        Aplicación pruebas<br>
+                        <small>
+                          Instrucciones
 
 
 
-                          </small>
-                        </p>
-                      </div>
+                        </small>
+                      </p>
                     </div>
+                  </div>
+              </a>
+            </div>
+          </div>
+      </div>
+
+      <div class="container-fluid"  id="parallax">
+        <img data-depth="0.1" src="./dist/images/background-1.jpeg" alt="">
+        <div class="w100">
+          <div class="row">
+            <div class="col-3">
+              <h2>Fundapar</h2>
+            </div>
+            <div class="col">
+              <img src="./dist/images/img-1.png" alt="" class="img-fluid" id="img-opa">
+            </div>
+            <div class="col-1">
+              <div id="login" class="text-center">
+                <p>
+                  <i class="fas fa-sign-in-alt"></i>
+                  Ingrese aquí.
+                </p>
+                <a  class="link-parallax" href="http://aulavirtual.fundapar.org/">
+                      SIMULACROS
                 </a>
               </div>
             </div>
+          </div>
         </div>
+      </div>
 
-        <div class="container-fluid"  id="parallax">
-          <img data-depth="0.1" src="./dist/images/background-1.jpeg" alt="">
-          <div class="w100">
+      <div class="container-fluid" id="objetivos">
+        <div class="row">
+          <div class="col text-center">
+            <h2>Objetivos</h2>
+            <h3>¿Cuáles son los objetivos de Saber Pro?</h3>
+            <p>
+              La aplicación de los módulos de competencias genéricas y específicas que conforman los exámenes de Estado Saber Pro, tienen como objetivo evaluar y proporcionar un reporte del grado de desarrollo de habilidades y conocimientos generales y particulares de estudiantes que han aprobado el 75 % de los créditos de sus estudios profesionales.
+            </p>
+          </div>
+          <div class="col">
+            <img src="./dist/images/target.png" alt="Target" class="img-fluid" id="target-img">
+          </div>
+        </div>
+      </div>
+
+      <div class="container-fluid" id="evalua">
+        <div class="row">
+          <div class="col">
+            <img src="./dist/images/evalua.png" alt="Evalua" id="evalua-img">
+          </div>
+          <div class="col">
+            <h2>
+              ¿A quiénes evalúa?
+            </h2>
             <div class="row">
-              <div class="col-3">
-                <h2>Fundapar</h2>
+              <div class="col">
+                <ul>
+                  <li>
+                    <p>
+                      <i class="fas fa-user"></i>
+                      Nivel Técnico Profesional
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <i class="fas fa-user"></i>
+                      Nivel Tecnológico
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <i class="fas fa-user"></i>
+                      Nivel Profesional
+                    </p>
+                  </li>
+                </ul>
               </div>
               <div class="col">
-                <img src="./dist/images/img-1.png" alt="" class="img-fluid" id="img-opa">
-              </div>
-              <div class="col-1">
-                <div id="login" class="text-center">
-                  <p>
-                    <i class="fas fa-sign-in-alt"></i>
-                    Ingrese aquí.
-                  </p>
-                  <a href="http://aulavirtual.fundapar.org/">
-                        SIMULACROS
-                  </a>
-                </div>
+                <p>
+                  <i class="fas fa-graduation-cap"></i>
+                  Con la publicación de la Ley 1324 de 2009 y el Decreto 3963 del mismo año, se dio una nueva orientación los exámenes de Estado de la educación superior (Saber Pro y Saber T y T), que se establecieron como obligatorios para obtener el título del nivel de pregrado.
+                </p>
               </div>
             </div>
           </div>
         </div>
-    </div>
+      </div>
+
+      <div class="container-fluid" id="queevalua">
+        <div class="row">
+          <div class="col text-center">
+            <h3>¿Qué se evalúa?</h3>
+            <p>
+              Las competencias genéricas del examen de Estado Saber Pro, evalúa a todos los estudiantes sin distinción de su área de conocimiento a través de 5 módulos:
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-5">
+            <img src="./dist/images/queevalua.png" alt=" Que evalua" id="queevalua-img">
+          </div>
+          <div class="col">
+            <div class="row">
+              <div class="col-5">
+                <ul>
+                  <li>
+                    <p><i class="fas fa-check"></i> Lectura Crítica</p>
+                  </li>
+                  <li>
+                    <p><i class="fas fa-check"></i> Razonamiento Cuantitativo</p>
+                  </li>
+                  <li>
+                    <p><i class="fas fa-check"></i> Competencias Ciudadanas</p>
+                  </li>
+                  <li>
+                    <p><i class="fas fa-check"></i> Comunicación Escrita</p>
+                  </li>
+                  <li>
+                    <p><i class="fas fa-check"></i> Inglés</p>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-3">
+                <p>
+                  Por otro lado, los módulos de competencias específicas están conformadas por temáticas y contenidos específicos de diferentes programas y de acuerdo a las áreas de formación propias de cada estudiante.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-fluid" id="footer">
+        <div class="w100" id="footeruno">
+          <div class="row">
+            <div class="col">
+              <img src="./dist/images/Fundapar-logo.png" alt="Fundapar">
+            </div>
+            <div class="col">
+              <p>
+                <i class="fas fa-phone"></i> +57 319 229 2579
+              </p>
+              <p>
+                <i class="fas fa-envelope"></i> contactos@fundapar.org
+              </p>
+              <p>
+                Barrio La Central Calle 19 A No 63-26, Cartagena - Bolívar
+              </p>
+            </div>
+            <div class="col">
+              Siguenos en:
+              <br>
+              <p>
+                <a target="_blank" href="https://www.facebook.com/fundaparcartagena1/"><i class="fab fa-facebook-f"></i></a>
+                <a target="_blank" href="https://www.instagram.com/fundaparcartagena/"><i class="fab fa-instagram"></i></a>
+                <a target="_blank" href="https://twitter.com/fundaparctg"><i class="fab fa-twitter"></i></a>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="w100" id="footerdos">
+          <div class="row">
+            <div class="col">
+              <p>
+                &copy;Copyright - Fundapar Todos los Derechos reservados.
+              </p>
+            </div>
+            <div class="col">
+              <a  data-toggle="modal" data-target="#creditosModal" href="#" id="creditsmodal">
+                Creditos
+              </a>
+
+              <!-- Modal -->
+            <div class="modal fade" id="creditosModal" tabindex="-1" role="dialog" aria-labelledby="CreditosModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Creditos</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <h3>Imagenes</h3>
+                  <ul>
+                    <li>Target <a href="http://www.freepik.com">Designed by makyzz / Freepik</a></li>
+                    <li>University student cap mortal board and diploma <a href="http://www.freepik.com">Designed by iconicbestiary / Freepik</a></li>
+                    <li>Analytical and creative brain <a href="http://www.freepik.com">Designed by Freepik</a></li>
+                  </ul>
+                  <h3>Sitio Web</h3>
+                  Inspirado en el landing page de <a href="http://prepasaber.com/" target="_blank">Prepa Saber</a>
+                  <br>
+                  Realizado por <a href="https://ancasystems.com" target="_blank">AncaSystems <img src="./dist/images/AncaSystems-Logo.png" alt="AncaSystems" id="AncaSystems-Logo"></a>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
 
 
-    <!-- JS -->
-    <script src="./node_modules/systemjs/dist/system.js" charset="utf-8"></script>
-    <script type="text/javascript">
-      SystemJS.config({
-        transpiler: "ts",
-        packages: {
-          '/dist/js':{
-            main: 'preicfes',
-            map:{
-              'jquery':'node_modules/jquery/dist/jquery.min.js',
-              'bootstrap':'node_modules/bootstrap/dist/js/bootstrap.bundle.min.js',
-              'parallax-js': 'node_modules/parallax-js/dist/parallax.min.js',
-            },
-            defaultExtension: 'js',
-          }
+  <!-- JS -->
+  <script src="./node_modules/systemjs/dist/system.js" charset="utf-8"></script>
+  <script type="text/javascript">
+    SystemJS.config({
+      transpiler: "ts",
+      packages: {
+        '/dist/js':{
+          main: 'preicfes',
+          map:{
+            'jquery':'node_modules/jquery/dist/jquery.min.js',
+            'bootstrap':'node_modules/bootstrap/dist/js/bootstrap.bundle.min.js',
+            'parallax-js': 'node_modules/parallax-js/dist/parallax.min.js',
+          },
+          defaultExtension: 'js',
         }
-      });
+      }
+    });
 
-      SystemJS.import('/dist/js/preicfes.js');
-    </script>
-  </body>
+    SystemJS.import('/dist/js/preicfes.js');
+  </script>
+</body>
 </html>
