Links Navbar, TS

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="container-fluid" id="navbar">
           <div class="row">
             <div class="col nav-item">
-                <a href="#">
+                <a href="#parallax">
                   <div class="row">
                     <div class="col-2">
                       <i class="far fa-folder-open"></i>
@@ -61,7 +61,7 @@
                 </a>
             </div>
             <div class="col nav-item">
-                <a href="#">
+                <a href="#objetivos">
                   <div class="row">
                     <div class="col-2">
                       <i class="fas fa-certificate"></i>
@@ -78,7 +78,7 @@
                 </a>
             </div>
             <div class="col nav-item">
-                <a href="#">
+                <a href="#evalua">
                   <div class="row">
                     <div class="col-2">
                       <i class="fas fa-child"></i>
@@ -95,7 +95,7 @@
                 </a>
             </div>
             <div class="col nav-item">
-                <a href="#">
+                <a href="#queevalua">
                   <div class="row">
                     <div class="col-2">
                       <i class="fas fa-assistive-listening-systems"></i>
