Correciones para producción

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <title>PreIcfes - Fundapar</title>
   <!-- css -->
-  <link rel="stylesheet" href="./dist/css/preicfes.css">
-  <link rel="stylesheet" href="./dist/css/bootstrap.css">
-  <link rel="stylesheet" href="./dist/css/fa-solid.css">
-  <link rel="stylesheet" href="./dist/css/fa-brands.css">
-  <link rel="stylesheet" href="./dist/css/fa-regular.css">
-  <link rel="stylesheet" href="./dist/css/fontawesome.css">
+  <link rel="stylesheet" href="./dist/css/preicfes/preicfes.css">
+  <link rel="stylesheet" href="./dist/css/bootstrap/bootstrap.css">
+  <link rel="stylesheet" href="./dist/css/fontawesome/fa-solid.css">
+  <link rel="stylesheet" href="./dist/css/fontawesome/fa-brands.css">
+  <link rel="stylesheet" href="./dist/css/fontawesome/fa-regular.css">
+  <link rel="stylesheet" href="./dist/css/fontawesome/fontawesome.css">
 </head>
 <body>
   <div id="body">
@@ -306,13 +306,13 @@
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Creditos</h5>
+                  <h5 class="modal-title" id="exampleModalLabel">Créditos</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
                 </div>
                 <div class="modal-body">
-                  <h3>Imagenes</h3>
+                  <h3>Imágenes</h3>
                   <ul>
                     <li>Target <a href="http://www.freepik.com">Designed by makyzz / Freepik</a></li>
                     <li>University student cap mortal board and diploma <a href="http://www.freepik.com">Designed by iconicbestiary / Freepik</a></li>
@@ -321,7 +321,8 @@
                   <h3>Sitio Web</h3>
                   Inspirado en el landing page de <a href="http://prepasaber.com/" target="_blank">Prepa Saber</a>
                   <br>
-                  Realizado por <a href="https://ancasystems.com" target="_blank">AncaSystems <img src="./dist/images/AncaSystems-Logo.png" alt="AncaSystems" id="AncaSystems-Logo"></a>
+                  Realizado por <a href="https://ancasystems.com" target="_blank">AncaSystems <img src="./dist/images/AncaSystems-Logo.png" alt="AncaSystems" id="AncaSystems-Logo"></a>. <br>
+                  AncaSystems no se hace responsable de cualquien daño cometido al realizar está página, cualquier inconveniente dirigirse a los funcionarios de <a href="https://fundapar.org">fundapar.org</a>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 </div>
