--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         <div class="w100" id="footeruno">
           <div class="row">
             <div class="col">
-              <img src="./dist/images/Fundapar-logo.png" alt="Fundapar">
+              <img src="./dist/images/Fundapar-Logo.png" alt="Fundapar" style="width: 120px;">
             </div>
             <div class="col">
               <p>
