Changes in css, and html

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </a>
             </div>
             <div class="col nav-item">
-                <a href="#">
+                <a href="#aplicacion-pruebas">
                   <div class="row">
                     <div class="col-2">
                       <i class="fas fa-book"></i>
@@ -259,6 +259,10 @@
             </div>
           </div>
         </div>
+      </div>
+
+      <div class="container-fluid" id="aplicacion-pruebas" style="padding:0px;">
+        <img src="./dist/images/aplicacion-pruebas.png" alt="Aplicación Pruebas" class="img-fluid" style="width:100%">
       </div>
 
       <div class="container-fluid" id="footer">
